# Sentrix

./: .dockerignore  .env.dokploy.example  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.yolo  LICENSE  README.md  docker-compose.yml  logs_render.txt  render.yaml  start-all.ps1  supabase-schema.sql  vercel.json
backend/: .coveragerc  .env.example  .gitignore  Dockerfile  MIGRATION_INSTRUCTIONS.md  README.md  app.py  diagnostic.py  diagnostic_env.py  fix_user_roles.py  main.py  pytest.ini  requirements.txt  run_migration.py  run_tests.ps1  run_tests.sh
docs/: BACKEND_STACK.md  FRONTEND_STACK.md  FUNCIONAMIENTO_BACKEND.md  FUNCIONAMIENTO_FRONTEND.md  FUNCIONAMIENTO_YOLO_SERVICE.md  SHARED_STACK.md  YOLO_STACK.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  .vercelignore  README.md  TEMPORAL_VALIDITY_INTEGRATION.md  index.html  nginx-cache.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  (+3 more)
shared/: .gitignore  MANIFEST.in  README.md  __init__.py  config_manager.py  data_models.py  file_utils.py  image_formats.py  import_utils.py  project_structure.py  pyproject.toml  requirements.txt  risk_assessment.py  temporal_persistence.py
shared/sentrix_shared/: RISK_ASSESSMENT_LOGIC.md  __init__.py  config_manager.py  data_models.py  error_handling.py  file_utils.py  gps_utils.py  image_deduplication.py  image_formats.py  import_utils.py  logging_utils.py  project_structure.py  risk_assessment.py
shared/tests/: __init__.py  test_image_formats.py  test_standardized_naming.py  test_temporal_persistence.py
(+437 files in other folders)
